Resolvendo z-index do header.

--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ form label {
     background-color: #f79d65;
     width: 100%;
     height: 100px;
+    z-index: 1;
 }
 
 .fixed-menu nav {
@@ -198,6 +199,7 @@ form label {
     padding-right: 0.8%;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
+    z-index: 2;
 }
 
 .search-top {
